projet-AKS/k8s/my-sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: projet-AKS
spec:
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: projet-AKS
  ports:
  - port: 3306
  clusterIP: "None"
