projet-AKS/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  tls: 
  - hosts: 
    - nginx-php.site
    secretName: letsencrypt-tls
  rules:
  - host: nginx-php.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: php-nginx-service
            port: 
              number: 80
